logs/validate.20260408-015604.log
Mode: isolate
Isolate: including Chap37 Chap45 Chap18 Chap19 Chap23 Chap06 Chap05 Chap02 Chap58 Chap59 Chap56 Chap57
error[E0422]: cannot find struct, variant or union type `by` in this scope
   --> src/Chap59/JohnsonStEphI64.rs:334:13
    |
334 |             by {};
    |             ^^ not found in this scope

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0422`.
Elapsed: 6s
Sampled Memory Usage: peak rust_verify RSS: 1896MB, peak z3 RSS: 128MB, min free: 24512MB
Sampled CPU Usage: rust_verify: 32s, z3 children: 31s
